force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Operation_Plan__c/Operation_Plan__c.object-meta.xml
<CustomObject>
    <label>Shift Pattern Master</label>
    <nameField>
        <label>Shift Pattern Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shift Pattern Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>