force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Operation_Plan__c/fields/Auth_Crew__c.field-meta.xml
<CustomField>
    <fullName>Auth_Crew__c</fullName>
    <label>Auth Crew</label>
    <length>15</length>
    <type>Text</type>
</CustomField>