force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Operation_Plan__c/fields/Auth_Shifts__c.field-meta.xml
<CustomField>
    <fullName>Auth_Shifts__c</fullName>
    <label>Auth Shifts</label>
    <length>20</length>
    <type>Text</type>
</CustomField>