force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Operation_Plan__c/fields/Crews_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Crews_Numeric__c</fullName>
    <label>Crews Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>