force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Operation_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Shifts_Numeric__c</columns>
    <columns>Crews_Numeric__c</columns>
    <columns>Auth_Shifts__c</columns>
    <columns>Auth_Crew__c</columns>
    <columns>Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>